# Spacefighter

./: .gitignore  CMakeLists.txt  Makefile  README.md  background.h  background.hpp  basecharacter.cpp  basecharacter.h  basecharacter.hpp  main.cpp  projectile.hpp  ship.cpp  ship.h  ship.hpp  window.h
headers/: background.hpp  game.hpp  projectile.hpp  ship.hpp
include/: audio.hpp  background.hpp  basecharacter.hpp  basestats.hpp  developertools.hpp  enemy.hpp  game.hpp  leveleditor.hpp  mothership.hpp  projectile.hpp  randomizer.hpp  ship.hpp  sprite.hpp  textures.hpp  window.hpp
levels/: level.txt
source/: background.cpp  basecharacter.cpp  basestats.cpp  developertools.cpp  enemy.cpp  game.cpp  leveleditor.cpp  main.cpp  mothership.cpp  projectile.cpp  ship.cpp  sprite.cpp  textures.cpp
src/: basecharacter.cpp  main.cpp  ship.cpp  textures.cpp
